init actor && repository controllers + tests
