# src/backend/src/main/kotlin/com/NOSQL/NOSQL/model/UniversityDocument.kt
@@ -2,14 +2,12 @@ package com.NOSQL.NOSQL.model
 
 import org.springframework.data.annotation.Id
 import org.springframework.data.mongodb.core.mapping.Document
-import java.time.LocalDateTime
 
-@Document(collection = "actors")
-data class Actor(
+@Document(collection = "universities")
+data class UniversityDocument(
     @Id
     val id: String? = null,
     val name: String,
-    val email: String,
-    val role: String = "USER",
-    val createdAt: LocalDateTime? = LocalDateTime.now()
+    val shortName: String? = null,
+    val oldNames: List<String>? = null
 )
